<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>piracer</name>
  <version>0.2.0</version>
  <description>ROS2 package for Waveshare PiRacer</description>
  <maintainer email="morrissettal2@vcu.edu">Adam Morrissett</maintainer>
  <maintainer email="marshallpt@vcu.edu">Patrick Marshall</maintainer>
  <license>MIT</license>

  <depend>autonomy_mgmt_msgs</depend>
  <depend>bno055_driver</depend>
  <depend>builtin_protos</depend>
  <depend>carma_v2x_msgs</depend>
  <depend>cmd_msgs</depend>
  <depend>opencity_utils</depend>
  <depend>piracer_msgs</depend>
  <depend>rclcpy</depend>
  <depend>traffic_signal_msgs</depend>
  <depend>transitions</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
